# SalesAPI

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: sales.py
app/schemas/: sale.py
app/services/: sales_analysis.py
