[project]
name = "salesapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeniy Semin",email = "evgeniy.zhenia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
